# Ro.Bo.

./: .gitignore  .gitmodules  CV_prj.ipynb  README.md  blender_save_gltf.py  convert_rig.sh
animatepy/: halo.glb  horns.glb  joint_debug.txt  main.py  requirements.txt  run.sh  sphere.glb  test.py
capture/: imageCapture.py
magnum/: CMakeLists.txt
magnum/src/: main.cpp
